<resources>
    <string name="app_name">Ureaqa Mobile</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="register_prompt">No Account? Sign Up!</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="date_of_birth">Birthday</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="name">First Name</string>
    <string name="results">Results</string>
    <string name="hydration_level">Hydration Level</string>
    <string name="last_name">Last Name</string>
    <string name="get_updated_results">Get Updated Results</string>
    <string name="last_test">Last Test: </string>
    <string name="kg">kg</string>
    <string name="lbs">lbs</string>
    <string name="weight">Weight</string>
    <string name="Drink">You should drink </string>
    <string name="mL_water">mL of water </string>
    <string name="L_water">L of water </string>
    <string name="asap">as soon as possible.</string>
    <string name="insights">Insights</string>
    <string name="settings">Settings</string>
    <string name="test">New Test</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_test">New Test</string>
</resources>
