<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="399dp"
        android:scrollbarStyle="outsideOverlay"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <EditText
                android:id="@+id/etEmail"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:hint="@string/username"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etPassword2"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/etName"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:hint="@string/name"
                android:inputType="text" />

            <EditText
                android:id="@+id/etLastName"
                android:layout_width="360dp"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:hint="@string/last_name"
                android:inputType="text" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/weight"
                    android:inputType="number" />

                <ToggleButton
                    android:id="@+id/toggleButton"
                    android:layout_width="75dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textOff="@string/lbs"
                    android:textOn="@string/kg" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/etBirthday"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_weight="1"
                    android:hint="@string/date_of_birth"
                    android:inputType="date"
                    android:visibility="visible" />

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="200dp" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/bRegister"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:text="@string/sign_up" />
</LinearLayout>